--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -34,6 +34,7 @@ jobs:
         pip install numpy
         pip install pynput
         pip install pyperclip
+        pip install pyautogui
     
     - name: Build EXE with PyInstaller
       run: |
